--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.12.2",
     "firebase": "^12.2.1",
+    "formik": "^2.4.6",
     "i18next": "^25.5.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.1",
